package com.fges.todoapp;

public class EnvManager {
    public static final String JSON_EXTENSION = ".json";
    public static final String CSV_EXTENSION = ".csv";
}
