package com.fges.todoapp;

public class ErreurManager {
    public static void handleError(String message) {
        System.err.println(message);
    }
}
